Stop sliders jumping around when they appear

--- a/static/css/abyssal.css
+++ b/static/css/abyssal.css
@@ -173,3 +173,7 @@ input.module-attribute-filter.neutral {
 #module-table>tbody>tr {
     height: 64px;
 }
+
+.slider-container {
+    height: 5px;
+}
